<resources>
    <string name="app_name">Hostel Hassle</string>
    <string name="welcome">Welcome! 😃</string>
    <string name="name">Pratyush Mahajan</string>
    <string name="service">Choose Service</string>
    <string name="complaint">Any Complaints ?</string>
    <string name="wifi">Wifi</string>
    <string name="plumber">Plumber</string>
    <string name="elctric">Electrician</string>
    <string name="carp">Carpenter</string>
    <string name="food">Mess</string>
    <string name="room">Room Service</string>
    <string name="home">Home</string>
    <string name="lost">Lost</string>
    <string name="profile">Profile</string>
    <string name="roomno">Room No.</string>
    <string name="history">History</string>
    <string name="info">Provide Information</string>
    <string name="prblm">Problem</string>
    <string name="submit">Submit</string>
    <string name="wifi_service">Wifi Service</string>
    <string name="show_my_complaints">Show my Complaints</string>
    <string name="drinking_water">Drinking Water</string>
    <string name="others">Others</string>
    <string name="carpenter_service">Carpenter Service</string>
    <string name="bed">Bed (A/B/C/D)</string>
    <string name="electrician_service">Electrician Service</string>
    <string name="plumber_service">Plumber Service</string>
    <string name="washroom">Washroom No.</string>
    <string name="mess_complaint">Mess Complaint</string>
    <string name="drinking_water_complaint">Drinking Water Complaint</string>
    <string name="any_other_complaint">Any Other Complaint</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="my_profile">My Profile</string>
    <string name="my_name">My Name</string>
    <string name="my_mail">My Mail</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="logout">Logout</string>
    <string name="description_of_item">Description of Item</string>
    <string name="item">Item</string>
    <string name="where_s_my_thing">Where\'s My Thing</string>
    <string name="my_service">My Service</string>
    <string name="complaint_date">Complaint Date - </string>
    <string name="status">Status - </string>
    <string name="date">Date - </string>
    <string name="pending">Pending</string>
    <string name="datenew">12/12/2023</string>
    <string name="my_complaints">My Complaints</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="email2">Email</string>
    <string name="hh">Hostel Hassle</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an Account?</string>

</resources>