<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsPlumber"
    android:background="@drawable/bgpic">

    <View
    android:id="@+id/hist"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:background="@drawable/ic_baseline_history_24"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.511"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.884"
    tools:ignore="InvalidId" />

    <View
        android:layout_width="35dp"
        android:id="@+id/back"
        android:layout_height="30dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        tools:ignore="InvalidId" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="440dp"
        android:background="@drawable/bg_gradient3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textInputLayout2"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/white"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.247">

            <EditText
                android:id="@+id/editText"
                android:layout_width="250dp"
                android:layout_height="65dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/roomno"
                android:inputType="number"
                tools:ignore="MissingConstraints" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/white"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="250dp"
                android:layout_height="65dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/washroom"
                android:inputType="textCapCharacters"
                tools:ignore="MissingConstraints" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textInputLayout"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/white"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.657">


            <EditText
                android:id="@+id/editText2"
                android:layout_width="250dp"
                android:layout_height="65dp"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:gravity="start|top"
                android:hint="@string/prblm"
                android:inputType="textMultiLine"
                tools:ignore="MissingConstraints" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_boundary"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.636" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:letterSpacing="0.07"
            android:text="@string/info"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:letterSpacing="0.02"
        android:text="@string/plumber_service"
        android:textColor="#B3000000"
        android:textSize="26dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@drawable/plumber" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.04"
        android:text="@string/show_my_complaints"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.147" />


</androidx.constraintlayout.widget.ConstraintLayout>